--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@bull-board/api": "^6.7.9",
+    "@bull-board/express": "^6.7.9",
     "@types/dotenv": "^8.2.3",
     "@types/ioredis": "^5.0.0",
     "bullmq": "^5.41.5",
     "express": "^4.21.2",
     "ioredis": "^5.5.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "zod": "^3.24.2"
   }
 }
